i modified my HTML

--- a/manage.html
+++ b/manage.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>manage</title>
-    
+
 </head>
 <body>
+    <section>
+        <!-- this is my navigation bar -->
+        <nav>
+            <img src="/resources/logo.svg" alt="manage logo">
+            <ul>
+            <li>Pricing</li>
+            <li>Product</li>
+            <li>About us</li>
+            <LI>Careers</LI>
+            <li>Communities</li>
+            </ul>
+
+            <button>Get started</button>
+        </nav>
+
+        <!-- this is my first section -->
+         <section>
+            <div>
+                <h1>bring everyone <br> together to build <br> better products</h1>
+
+                <p>manage makes is simple for software team <br> to olan a day-to-day task while keeping the <br> larger team goals in view. </p>
+            </div>
+
+            <div>
+                <img src="/resources/illustration-intro.svg" alt=" intro section">
+            </div>
+         </section>
+
+    </section>
     
 </body>
 </html>
