i created section 2 in html

--- a/manage.html
+++ b/manage.html
@@ -27,15 +27,49 @@
             <div>
                 <h1>bring everyone <br> together to build <br> better products</h1>
 
-                <p>manage makes is simple for software team <br> to olan a day-to-day task while keeping the <br> larger team goals in view. </p>
+                <p>manage makes it simple for software team <br> to plan a day-to-day task while keeping the <br> larger team goals in view. </p>
             </div>
 
             <div>
                 <img src="/resources/illustration-intro.svg" alt=" intro section">
+                <link rel="stylesheet" href="/manage.css">
             </div>
          </section>
 
     </section>
+    <!-- THIS IS MY SECTION II -->
+    <section>
+        <div>
+            <h1>what's diffrent about manage</h1>
+            <p>manage provides all the functionalities your 
+             <br>team needs without the complexity. our <br>
+             soft ware is tailor-made for morden digital <br>
+              product teams.</p>
+        </div>
+        <div>
+            <div>
+                <h1>01</h1>
+
+                <div>
+                    <h3>track-company-wide progress</h3>
+                    <p> see how your day-to-task fit into the wider vision. <br> Go from tracking progress at the milestone all the <br>way done to the smallest of details. Never lose sight of <br> the bigger picture again. </p>
+                </div>
+                <div>
+                    <div>
+                        <h1>02</h1>
+                        <div>
+                            <h3>Advanced built-in Report</h3>
+                            <p> set internal delivery estimate and track progress towards company goals. Our costomisable dashboard helps you build our the report you need  </p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
     
 </body>
 </html>
