my third attempt

--- a/manage.html
+++ b/manage.html
@@ -11,61 +11,98 @@
         <!-- this is my navigation bar -->
         <nav>
             <img src="/resources/logo.svg" alt="manage logo">
-            <ul>
-            <li>Pricing</li>
-            <li>Product</li>
-            <li>About us</li>
-            <LI>Careers</LI>
-            <li>Communities</li>
+            <ul class="listing">
+
+            <li>
+                <a href="https://www.facebook.com" target="blank">Pricing</a> 
+            </li>
+            <li>
+                <a href="https://www.facebook.com" target="blank">Product</a>
+            </li>
+            <li><a href="https://www.facebook.com" target="blank">About us</a> 
+            </li>
+            <LI>
+                <a href="https://www.facebook.com" target="blank">Careers</a>
+            </LI>
+            <li>
+                <a href="https://www.facebook.com" target="blank">Communities</a>
+            </li>
             </ul>
 
-            <button>Get started</button>
+            <button id="get-started">Get-started</button>
         </nav>
 
         <!-- this is my first section -->
-         <section>
-            <div>
-                <h1>bring everyone <br> together to build <br> better products</h1>
+         <section id="section-1">
+            <div class="section-1-text">
+                <h1>Bring everyone <br> together to build <br> better products</h1>
 
-                <p>manage makes it simple for software team <br> to plan a day-to-day task while keeping the <br> larger team goals in view. </p>
+                <p>manage makes it simple for software team <br> to plan a day-to-day task while keeping the
+                     <br> larger team goals in view.
+                     </p>
+                     <button id="get-started">Get-started</button>
             </div>
 
-            <div>
+            <div class="section-1-img">
                 <img src="/resources/illustration-intro.svg" alt=" intro section">
                 <link rel="stylesheet" href="/manage.css">
             </div>
          </section>
 
     </section>
+
     <!-- THIS IS MY SECTION II -->
-    <section>
-        <div>
+    <section id="section-2">
+
+        <div class="first-part">
             <h1>what's diffrent about manage</h1>
+
             <p>manage provides all the functionalities your 
              <br>team needs without the complexity. our <br>
              soft ware is tailor-made for morden digital <br>
               product teams.</p>
         </div>
-        <div>
-            <div>
-                <h1>01</h1>
+
+        <div class="second-part">
+            <div class="no-1">
+                <h1 class="color">01</h1>
 
                 <div>
                     <h3>track-company-wide progress</h3>
-                    <p> see how your day-to-task fit into the wider vision. <br> Go from tracking progress at the milestone all the <br>way done to the smallest of details. Never lose sight of <br> the bigger picture again. </p>
+                    <p> see how your day-to-task fit into the wider vision. 
+                        <br> Go from tracking progress at the milestone all the
+                         <br>way done to the smallest of details. Never lose sight of 
+                         <br> the bigger picture again.
+                    </p>
                 </div>
-                <div>
-                    <div>
-                        <h1>02</h1>
-                        <div>
-                            <h3>Advanced built-in Report</h3>
-                            <p> set internal delivery estimate and track progress towards company goals. Our costomisable dashboard helps you build our the report you need  </p>
-                        </div>
-                    </div>
-                </div>
-
             </div>
 
+            <div class="no-2">
+                <h1 class="color">02</h1>
+
+                <div>
+                    <h3>Advanced built-in Report</h3>
+
+                    <p> 
+                        set internal delivery estimate and track progress towards
+                        <br> company goals. Our costomisable dashboard helps you
+                        <br> build our the report you need 
+                    </p>
+                </div>
+            </div>
+
+            <div class="no-3">
+                <h1 class="color">03</h1>
+                <div>
+                    <h3> everything you need in one place</h3>
+
+                    <p> stop jumping from one service to another to <br>
+                    communicate.store files, track task and share <br> 
+                    document. manage offers an all-in-one team <br> 
+                    prductivity solution.
+                </p>
+                </div>
+            </div>
         </div>
 
     </section>
