--- a/manage.html
+++ b/manage.html
@@ -118,7 +118,6 @@
     </section>
 
     <!-- This is my section 3 -->
-
     <section id="section-3">
             <h1>what they've said</h1>
 
@@ -178,11 +177,13 @@
 
     <footer>
         <!-- the first footer div -->
+
+        <p class="top-copy">&copy; copy right 2020. All rights reserved.</p>
+
         <div class="foot-1">
-             <img class="logo-img" src="resources/logo.svg" alt="">
+            <img class="logo-img" src="resources/logo.svg" alt="">
 
-             <div class="icon-holder"> 
-
+            <div class="icon-holder"> 
                 <a href="http://www.facebook.com" target="blank">
                     <img src="resources/icon-facebook.svg" alt="r">
                 </a>
@@ -202,9 +203,7 @@
                  <a href="http://www.instagram.com" target="blank">
                     <img src="resources/icon-instagram.svg" alt="">
                 </a>
-
-             </div>
-
+            </div>
         </div>
 
         <!-- the second footer div  -->
@@ -249,14 +248,10 @@
         <div class="foot-3">
             <div>
                 <input type="email" placeholder="updates in your inbox...">
-                 <button id="go">Go</button>
+                <button id="go">Go</button>
+            </div>
 
-             </div>
-
-       
- 
-     <p>&copy; copy right 2020. All rights reserved.</p>
-
+            <p class="down-copy">&copy; copy right 2020. All rights reserved.</p>
         </div>
     </footer>
 
